Added group website

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,15 @@
     </iframe>
     </div>
 
+    <h2>Group Website</h2>
+    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+    <div class="descriptions">
+    <p>
+    </p>
+    <iframe src="https://whitley0.wixsite.com/princesolutions/blog" width="90%" height="800px">
+    </iframe>
+    </div>
+
     <h2>Flow Model</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
@@ -101,7 +110,17 @@
     </iframe>
     </div>
 
+    <h2>Final Prototype</h2>
+    <button type="button" class="collapse" title="Click to view project">
+      <a href="https://balsamiq.cloud/skkf2yw/p5p9hr0/r9222?f=N4IgUiBcAMA0IDkpxAYWfAMhkAhHAsjgFo4DSUA2gLoC%2BQA%3D">
+      Click to go to site
+      </a>
+    </button>
+    <div class="descriptions">
+    <p>
+    </p>
 
+    </div>
 
   <footer>
   </footer>
