Added scroll param
Attempting to make content scrollable on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div class="descriptions">
     <p>
     </p>
-    <iframe src="pdf/Challenge Statement Excercise.pdf" width="90%" height="800px">
+    <iframe src="pdf/Challenge Statement Excercise.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
@@ -25,7 +25,7 @@
     <div class="descriptions">
     <p>
     </p>
-    <iframe src="https://whitley0.wixsite.com/princesolutions/blog" width="90%" height="800px">
+    <iframe src="https://whitley0.wixsite.com/princesolutions/blog" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
@@ -34,7 +34,7 @@
     <div class="descriptions">
     <p>
     </p>
-    <iframe src="pdf/Flow Model.pdf" width="90%" height="800px">
+    <iframe src="pdf/Flow Model.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
@@ -43,7 +43,7 @@
     <div class="descriptions">
     <p>
     </p>
-    <iframe src="pdf/Contextual Analysis.pdf" width="90%" height="800px">
+    <iframe src="pdf/Contextual Analysis.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
@@ -52,7 +52,7 @@
     <div class="descriptions">
     <p>
     </p>
-    <iframe src="pdf/Flow Model.pdf" width="90%" height="800px">
+    <iframe src="pdf/Flow Model.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
@@ -61,7 +61,7 @@
     <div class="descriptions">
     <p>
     </p>
-    <iframe src="pdf/Project Assignment 3_ Design Part 1_ Personas & Design Alternatives.pdf" width="90%" height="800px">
+    <iframe src="pdf/Project Assignment 3_ Design Part 1_ Personas & Design Alternatives.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
@@ -70,7 +70,7 @@
     <div class="descriptions">
     <p>
     </p>
-    <iframe src="pdf/Proj 3 Part 2.pdf" width="90%" height="800px">
+    <iframe src="pdf/Proj 3 Part 2.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
@@ -79,7 +79,7 @@
     <div class="descriptions">
     <p>
     </p>
-    <iframe src="pdf/Project 4 - Pt. 1.pdf" width="90%" height="800px">
+    <iframe src="pdf/Project 4 - Pt. 1.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
@@ -88,7 +88,7 @@
     <div class="descriptions">
     <p>
     </p>
-    <iframe src="pdf/Project 4 - Pt. 2.pdf" width="90%" height="800px">
+    <iframe src="pdf/Project 4 - Pt. 2.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
@@ -97,7 +97,7 @@
     <div class="descriptions">
     <p>
     </p>
-    <iframe src="pdf/Project 5_ Evaluation.docx.pdf" width="90%" height="800px">
+    <iframe src="pdf/Project 5_ Evaluation.docx.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
@@ -106,7 +106,7 @@
     <div class="descriptions">
     <p>
     </p>
-    <iframe src="pdf/Sketches and Scenarios.pdf" width="90%" height="800px">
+    <iframe src="pdf/Sketches and Scenarios.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
