--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
     <h2>Challenge Statement</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
-    <p>
-    </p>
+    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Challenge%20Statement%20Excercise.pdf">Link to work</a>
     <iframe src="pdf/Challenge Statement Excercise.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
@@ -23,8 +22,6 @@
     <h2>Group Website</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
-    <p>
-    </p>
     <iframe src="https://whitley0.wixsite.com/princesolutions/blog" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
@@ -32,8 +29,7 @@
     <h2>Flow Model</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
-    <p>
-    </p>
+    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Flow%20Model.pdf">Link to work</a>
     <iframe src="pdf/Flow Model.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
@@ -41,26 +37,23 @@
     <h2>Project 1</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
-    <p>
-    </p>
-    <iframe src="pdf/Contextual Analysis.pdf" width="90%" height="800px" scroll="yes">
+    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%201.pdf">Link to work</a>
+    <iframe src="pdf/Project 1.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
     <h2>Project 2 - Contextual Inquiry and Analysis</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
-    <p>
-    </p>
-    <iframe src="pdf/Flow Model.pdf" width="90%" height="800px" scroll="yes">
+    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Contextual%20Analysis.pdf">Link to work</a>
+    <iframe src="pdf/Project 2_ Contextual Inquiry and Contextual Analysis.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
     <h2>Project 3 - Design Pt. 1</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
-    <p>
-    </p>
+    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%20Assignment%203_%20Design%20Part%201_%20Personas%20&%20Design%20Alternatives.pdf">Link to work</a>
     <iframe src="pdf/Project Assignment 3_ Design Part 1_ Personas & Design Alternatives.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
@@ -68,8 +61,7 @@
     <h2>Project 3 - Design Pt. 2</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
-    <p>
-    </p>
+    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Proj%203%20Part%202.pdf">Link to work</a>
     <iframe src="pdf/Proj 3 Part 2.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
@@ -77,8 +69,7 @@
     <h2>Project 4 - Pt. 1</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
-    <p>
-    </p>
+    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%204%20-%20Pt.%201.pdf">Link to work</a>
     <iframe src="pdf/Project 4 - Pt. 1.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
@@ -86,8 +77,7 @@
     <h2>Project 4 - Pt. 2</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
-    <p>
-    </p>
+    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%204%20-%20Pt.%202.pdf">Link to work</a>
     <iframe src="pdf/Project 4 - Pt. 2.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
@@ -95,8 +85,7 @@
     <h2>Project 5</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
-    <p>
-    </p>
+    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%205_%20Evaluation.docx.pdf">Link to work</a>
     <iframe src="pdf/Project 5_ Evaluation.docx.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
@@ -104,8 +93,7 @@
     <h2>Sketches and Scenarios</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
-    <p>
-    </p>
+    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Sketches%20and%20Scenarios.pdf">Link to work</a>
     <iframe src="pdf/Sketches and Scenarios.pdf" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
