--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,46 @@
   <title> Prince Solutions Digital Portfolio </title>
   <meta name = "Ali Bhatti, Luke Gibson, Joshua May, Dennis Whitley III" content="width=device-width, initial-scale=1">
   <link rel  = "stylesheet" href ="css/styles.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
+  <!-- Sidebar/menu -->
+<nav class="w3-sidebar w3-collapse w3-top w3-large w3-padding" id="mySidebar"><br>
+  <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
+
+  <div class="w3-container">
+  </div>
+  <div class="w3-bar-block">
+    <a href="#" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Home</a>
+    <a href="#challenge" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Challenge Statement</a>
+    <a href="#site" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Website</a>
+    <a href="#flow" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Flow Models</a>
+    <a href="#proj1" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Project 1</a>
+    <a href="#proj2" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Project 2</a>
+    <a href="#proj3_1" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Proj3-Pt.2</a>
+    <a href="#proj3_2" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Proj3-Pt.2</a>
+    <a href="#proj4_1" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Proj4-Pt.1</a>
+    <a href="#proj4_2" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Proj4-Pt.2</a>
+    <a href="#proj5" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Project 5</a>
+    <a href="#sketches" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Sketches and Scenarios</a>
+    <a href="#finalePro" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Final Prototype</a>
+    <a href="#finalPres" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Final Presentation</a>
+  </div>
+</nav>
+
+<!-- Top menu on small screens -->
+<header class="w3-container w3-top w3-hide-large w3-xlarge w3-padding" id="topBar">
+  <a href="javascript:void(0)" class="w3-button w3-margin-right" onclick="openNav()">☰</a>
+</header>
+
+<!-- Overlay effect when opening sidebar on small screens -->
+<div class="w3-overlay w3-hide-large" onclick="closeNav()" style="cursor:pointer" title="Close Side Menu" id="myOverlay"></div>
+
   <header>
     <h1>Prince Solutions Project Portfolio</h1>
   </header>
   <div id="portfolio">
-    <h2>Challenge Statement</h2>
+    <h2  id="challenge">Challenge Statement</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
     <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Challenge%20Statement%20Excercise.pdf">Link to work</a>
@@ -19,14 +52,14 @@
     </iframe>
     </div>
 
-    <h2>Group Website</h2>
+    <h2  id="site">Group Website</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
     <iframe src="https://whitley0.wixsite.com/princesolutions/blog" width="90%" height="800px" scroll="yes">
     </iframe>
     </div>
 
-    <h2>Flow Model</h2>
+    <h2  id="flow">Flow Model</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
     <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Flow%20Model.pdf">Link to work</a>
@@ -34,7 +67,7 @@
     </iframe>
     </div>
 
-    <h2>Project 1</h2>
+    <h2  id="proj1">Project 1</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
     <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%201.pdf">Link to work</a>
@@ -42,7 +75,7 @@
     </iframe>
     </div>
 
-    <h2>Project 2 - Contextual Inquiry and Analysis</h2>
+    <h2  id="proj2">Project 2 - Contextual Inquiry and Analysis</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
     <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Contextual%20Analysis.pdf">Link to work</a>
@@ -50,7 +83,7 @@
     </iframe>
     </div>
 
-    <h2>Project 3 - Design Pt. 1</h2>
+    <h2  id="proj3_1">Project 3 - Design Pt. 1</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
     <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%20Assignment%203_%20Design%20Part%201_%20Personas%20&%20Design%20Alternatives.pdf">Link to work</a>
@@ -58,7 +91,7 @@
     </iframe>
     </div>
 
-    <h2>Project 3 - Design Pt. 2</h2>
+    <h2  id="proj3_2">Project 3 - Design Pt. 2</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
     <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Proj%203%20Part%202.pdf">Link to work</a>
@@ -66,7 +99,7 @@
     </iframe>
     </div>
 
-    <h2>Project 4 - Pt. 1</h2>
+    <h2 id="proj4_1">Project 4 - Pt. 1</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
     <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%204%20-%20Pt.%201.pdf">Link to work</a>
@@ -74,7 +107,7 @@
     </iframe>
     </div>
 
-    <h2>Project 4 - Pt. 2</h2>
+    <h2 id="proj4_2">Project 4 - Pt. 2</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
     <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%204%20-%20Pt.%202.pdf">Link to work</a>
@@ -82,7 +115,7 @@
     </iframe>
     </div>
 
-    <h2>Project 5</h2>
+    <h2 id="proj5">Project 5</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
     <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%205_%20Evaluation.docx.pdf">Link to work</a>
@@ -90,7 +123,7 @@
     </iframe>
     </div>
 
-    <h2>Sketches and Scenarios</h2>
+    <h2 id="sketches">Sketches and Scenarios</h2>
     <button type="button" class="collapse" title="Click to view project">Click to view project</button>
     <div class="descriptions">
     <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Sketches%20and%20Scenarios.pdf">Link to work</a>
@@ -98,16 +131,18 @@
     </iframe>
     </div>
 
-    <h2>Final Prototype</h2>
+    <h2 id="finalPro">Final Prototype</h2>
     <button type="button" class="collapse" title="Click to view project">
       <a href="https://balsamiq.cloud/skkf2yw/p5p9hr0/r9222?f=N4IgUiBcAMA0IDkpxAYWfAMhkAhHAsjgFo4DSUA2gLoC%2BQA%3D">
       Click to go to site
       </a>
     </button>
-    <div class="descriptions">
-    <p>
-    </p>
 
+    <h2 id="finalPres">Final Presentation</h2>
+    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+    <div class="descriptions">
+    <iframe src="mp4/pres_vid.mp4" width="90%" height="800px" scroll="yes">
+    </iframe>
     </div>
 
   <footer>
@@ -127,5 +162,15 @@ for (i = 0; i < coll.length; i++) {
     }
   });
 }
+function openNav() {
+  document.getElementById("mySidebar").style.display = "block";
+  document.getElementById("myOverlay").style.display = "block";
+};
+
+function closeNav() {
+  document.getElementById("mySidebar").style.display = "none";
+  document.getElementById("myOverlay").style.display = "none";
+};
+
 </script>
 </html>
