Adjusted styles and content

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-  <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-collapse w3-top w3-large w3-padding" id="mySidebar"><br>
-  <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
-  <div class="w3-container">
-  </div>
+    <!-- Sidebar/menu -->
+    <nav class="w3-sidebar w3-collapse w3-top w3-large w3-padding" id="mySidebar"><br>
+      <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
+      <div class="w3-container">
+      </div>
   <div class="w3-bar-block">
     <a href="#" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Home</a>
     <a href="#challenge" onclick="closeNav()" class="w3-bar-item w3-button w3-hover-white">Challenge Statement</a>
@@ -41,111 +41,111 @@
 
   <header>
     <h1>Prince Solutions Project Portfolio</h1>
+    <h3>*Follow links to work for viewing in mobile browsers*</h3>
   </header>
   <div id="portfolio">
-    <h2  id="challenge">Challenge Statement</h2>
-    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
-    <div class="descriptions">
-    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Challenge%20Statement%20Excercise.pdf">Link to work</a>
-    <iframe src="pdf/Challenge Statement Excercise.pdf" width="90%" height="800px" scroll="yes">
-    </iframe>
+    <div class="wrapper">
+      <h2  id="challenge">Challenge Statement</h2>
+      <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+      <div class="descriptions">
+      <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Challenge%20Statement%20Excercise.pdf">Link to PDF (For better viewing in mobile browsers)</a>
+      <iframe title="Challenge statement" alt="Challenge statement" src="pdf/Challenge Statement Excercise.pdf" width="90%" height="800px" scroll="yes">
+      </iframe>
+      </div>
+
+      <h2  id="site">Group Website</h2>
+      <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+      <div class="descriptions">
+      <iframe title="Group Website" src="https://whitley0.wixsite.com/princesolutions/blog" width="90%" height="800px" scroll="yes">
+      </iframe>
+      </div  >
+
+      <h2  id="flow">Flow Model</h2>
+      <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+      <div class="descriptions">
+      <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Flow%20Model.pdf">Link to PDF (For better viewing in mobile browsers)</a>
+      <iframe title="Flow Model" src="pdf/Flow Model.pdf" width="90%" height="800px" scroll="yes">
+      </iframe>
+      </div>
+
+      <h2  id="proj1">Project 1</h2>
+      <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+      <div class="descriptions">
+      <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%201.pdf">Link to PDF (For better viewing in mobile browsers)</a>
+      <iframe title="Project 1" src="pdf/Project 1.pdf" width="90%" height="800px" scroll="yes">
+      </iframe>
+      </div>
+
+      <h2  id="proj2">Project 2 - Contextual Inquiry and Analysis</h2>
+      <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+      <div class="descriptions">
+      <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Contextual%20Analysis.pdf">Link to PDF (For better viewing in mobile browsers)</a>
+      <iframe title="Project 2" src="pdf/Project 2_ Contextual Inquiry and Contextual Analysis.pdf" width="90%" height="800px" scroll="yes">
+      </iframe>
+      </div>
+
+      <h2  id="proj3_1">Project 3 - Design Pt. 1</h2>
+      <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+      <div class="descriptions">
+      <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%20Assignment%203_%20Design%20Part%201_%20Personas%20&%20Design%20Alternatives.pdf">Link to PDF (For better viewing in mobile browsers)</a>
+      <iframe title="Project 3 - 1" src="pdf/Project Assignment 3_ Design Part 1_ Personas & Design Alternatives.pdf" width="90%" height="800px" scroll="yes">
+      </iframe>
+      </div>
+
+      <h2  id="proj3_2">Project 3 - Design Pt. 2</h2>
+      <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+      <div class="descriptions">
+      <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Proj%203%20Part%202.pdf">Link to PDF (For better viewing in mobile browsers)</a>
+      <iframe title="Project 3 - 2" src="pdf/Proj 3 Part 2.pdf" width="90%" height="800px" scroll="yes">
+      </iframe>
+      </div>
+
+      <h2 id="proj4_1">Project 4 - Pt. 1</h2>
+      <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+      <div class="descriptions">
+      <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%204%20-%20Pt.%201.pdf">Link to PDF (For better viewing in mobile browsers)</a>
+      <iframe title="Project 4 - 1" src="pdf/Project 4 - Pt. 1.pdf" width="90%" height="800px" scroll="yes">
+      </iframe>
+      </div>
+
+      <h2 id="proj4_2">Project 4 - Pt. 2</h2>
+      <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+      <div class="descriptions">
+      <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%204%20-%20Pt.%202.pdf">Link to PDF (For better viewing in mobile browsers)</a>
+      <iframe title="Project 4 - 2" src="pdf/Project 4 - Pt. 2.pdf" width="90%" height="800px" scroll="yes">
+      </iframe>
+      </div>
+
+      <h2 id="proj5">Project 5</h2>
+      <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+      <div class="descriptions">
+      <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%205_%20Evaluation.docx.pdf">Link to PDF (For better viewing in mobile browsers)</a>
+      <iframe title="Project 5" src="pdf/Project 5_ Evaluation.docx.pdf" width="90%" height="800px" scroll="yes">
+      </iframe>
+      </div>
+
+      <h2 id="sketches">Sketches and Scenarios</h2>
+      <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+      <div class="descriptions">
+      <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Sketches%20and%20Scenarios.pdf">Link to PDF (For better viewing in mobile browsers)</a>
+      <iframe title="Sketches and scenarios" src="pdf/Sketches and Scenarios.pdf" width="90%" height="800px" scroll="yes">
+      </iframe>
+      </div>
+
+      <h2 id="finalPro">Final Prototype</h2>
+      <button title="Project prototype - may not be mobile accessible" type="button" class="collapse" title="Click to view project">
+        <a href="https://balsamiq.cloud/skkf2yw/p5p9hr0/r9222?f=N4IgUiBcAMA0IDkpxAYWfAMhkAhHAsjgFo4DSUA2gLoC%2BQA%3D">
+        Click to go to site
+        </a>
+      </button>
+
+      <h2 id="finalPres">Final Presentation</h2>
+      <button type="button" class="collapse" title="Click to view project">Click to view project</button>
+      <div class="opens" id="pres">
+      <iframe title="Final presentation video" src="mp4/pres_vid.mp4" width="90%" height="800px" scroll="yes">
+      </iframe>
+      </div>
     </div>
-
-    <h2  id="site">Group Website</h2>
-    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
-    <div class="descriptions">
-    <iframe src="https://whitley0.wixsite.com/princesolutions/blog" width="90%" height="800px" scroll="yes">
-    </iframe>
-    </div>
-
-    <h2  id="flow">Flow Model</h2>
-    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
-    <div class="descriptions">
-    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Flow%20Model.pdf">Link to work</a>
-    <iframe src="pdf/Flow Model.pdf" width="90%" height="800px" scroll="yes">
-    </iframe>
-    </div>
-
-    <h2  id="proj1">Project 1</h2>
-    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
-    <div class="descriptions">
-    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%201.pdf">Link to work</a>
-    <iframe src="pdf/Project 1.pdf" width="90%" height="800px" scroll="yes">
-    </iframe>
-    </div>
-
-    <h2  id="proj2">Project 2 - Contextual Inquiry and Analysis</h2>
-    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
-    <div class="descriptions">
-    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Contextual%20Analysis.pdf">Link to work</a>
-    <iframe src="pdf/Project 2_ Contextual Inquiry and Contextual Analysis.pdf" width="90%" height="800px" scroll="yes">
-    </iframe>
-    </div>
-
-    <h2  id="proj3_1">Project 3 - Design Pt. 1</h2>
-    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
-    <div class="descriptions">
-    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%20Assignment%203_%20Design%20Part%201_%20Personas%20&%20Design%20Alternatives.pdf">Link to work</a>
-    <iframe src="pdf/Project Assignment 3_ Design Part 1_ Personas & Design Alternatives.pdf" width="90%" height="800px" scroll="yes">
-    </iframe>
-    </div>
-
-    <h2  id="proj3_2">Project 3 - Design Pt. 2</h2>
-    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
-    <div class="descriptions">
-    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Proj%203%20Part%202.pdf">Link to work</a>
-    <iframe src="pdf/Proj 3 Part 2.pdf" width="90%" height="800px" scroll="yes">
-    </iframe>
-    </div>
-
-    <h2 id="proj4_1">Project 4 - Pt. 1</h2>
-    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
-    <div class="descriptions">
-    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%204%20-%20Pt.%201.pdf">Link to work</a>
-    <iframe src="pdf/Project 4 - Pt. 1.pdf" width="90%" height="800px" scroll="yes">
-    </iframe>
-    </div>
-
-    <h2 id="proj4_2">Project 4 - Pt. 2</h2>
-    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
-    <div class="descriptions">
-    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%204%20-%20Pt.%202.pdf">Link to work</a>
-    <iframe src="pdf/Project 4 - Pt. 2.pdf" width="90%" height="800px" scroll="yes">
-    </iframe>
-    </div>
-
-    <h2 id="proj5">Project 5</h2>
-    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
-    <div class="descriptions">
-    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Project%205_%20Evaluation.docx.pdf">Link to work</a>
-    <iframe src="pdf/Project 5_ Evaluation.docx.pdf" width="90%" height="800px" scroll="yes">
-    </iframe>
-    </div>
-
-    <h2 id="sketches">Sketches and Scenarios</h2>
-    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
-    <div class="descriptions">
-    <a href="https://joshwmay.github.io/PrinceSolutions/public/pdf/Sketches%20and%20Scenarios.pdf">Link to work</a>
-    <iframe src="pdf/Sketches and Scenarios.pdf" width="90%" height="800px" scroll="yes">
-    </iframe>
-    </div>
-
-    <h2 id="finalPro">Final Prototype</h2>
-    <button type="button" class="collapse" title="Click to view project">
-      <a href="https://balsamiq.cloud/skkf2yw/p5p9hr0/r9222?f=N4IgUiBcAMA0IDkpxAYWfAMhkAhHAsjgFo4DSUA2gLoC%2BQA%3D">
-      Click to go to site
-      </a>
-    </button>
-
-    <h2 id="finalPres">Final Presentation</h2>
-    <button type="button" class="collapse" title="Click to view project">Click to view project</button>
-    <div class="opens" id="pres">
-    <iframe src="mp4/pres_vid.mp4" width="90%" height="800px" scroll="yes">
-    </iframe>
-    </div>
-
-  <footer>
-  </footer>
 </body>
 <script>
 var coll = document.getElementsByClassName("collapse");
